# rpa-airbnb

./: .gitignore  AirbnbScraperPro.spec  README.md  config.json  gui.py  main.py  pyproject.toml  scraping_firecrawl.py
data/: perfis_airbnb_cincinnati-ohio.xlsx  perfis_airbnb_cunha-sp.xlsx  perfis_airbnb_jacarei-sp.xlsx  perfis_airbnb_jacarei.xlsx  perfis_airbnb_jacarei_free.xlsx  perfis_airbnb_sao-jose-dos-campos-sp.xlsx  perfis_airbnb_taubate-sp.xlsx  todas_urls_encontradas.txt  urls_descobertas_cincinnati-ohio.txt  urls_descobertas_cunha-sp.txt  urls_descobertas_jacarei-sp.txt  urls_descobertas_sao-jose-dos-campos-sp.txt  urls_descobertas_taubate-sp.txt
