[project]
name = "raspagem-airbnb"
version = "0.1.0"
description = "Raspador de Airbnb com Selenium e GUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "selenium>=4.18.0",
    "webdriver-manager>=4.0.0",
    "pyinstaller>=6.4.0",
]
